# asciidoc-static-pages

./: .gitignore  .pages.yaml  Cargo.toml  DEV.adoc  Dockerfile  Dockerfile_1  README.adoc  doc.sh  setup-deb.sh  value.properties
.github/workflows/: gh-images.yml
docs/: MENU.adoc  README.adoc
example/: .env  MAIN.adoc  MENU.adoc  TEST.adoc  attr.properties
script/: setup-deb.sh
src/: adoc.rs  libs.rs  main.rs
src/libs/: config.rs  file.rs  git.rs  prop.rs  string.rs
src/res/: body.html  index.html  menu.html  res.rs  style.css
static/: index.html
template/: docinfo-footer.html  menu.css
