[package]
name = "asciidoc-static-pages"
version = "0.1.0"
edition = "2021"
description = "AsciiDoc Document Builder"
license = "MIT"

[dependencies]
openssl = { version = "=0.10.41", features = ["vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "3.2.16", features = ["derive"] }
git2 = "0.15"
chrono = "0.4.19"

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'
